Correção de email no arquivo composer

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Roberto L. Machado",
-            "email": "roberto.machado@superig.com.br",
+            "email": "linux.rlm@gmail.com.br",
             "homepage": "http://www.nfephp.org",
             "role": "Developer"
         },{
